# tin-canMCP

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  HOW-TO-USE.md  LICENSE  README.md  dev-setup.sh  docker-compose.yml  docker-run.sh  main.py  pyproject.toml  requirements.txt
ai-prompts/: 00-master-mcp-implementation.txt  source-hints.md
app/: __init__.py  config.py  server.py
app/catalog_runtime/: __init__.py  broker.py  executor.py  loader.py
app/prompts/: __init__.py
app/tools/: __init__.py  catalog_tools.py
catalog-runtime/: README.md
catalog-runtime/registry/: aliases.json  broker.json  groups.json  overlaps.json  tiers.json  tools.json
catalog-runtime/schema/: aliases.schema.json  broker.schema.json  groups.schema.json  overlaps.schema.json  source_variants.schema.json  tiers.schema.json  tools.schema.json
docs/: catalog-runtime-template.md  repo-reset-from-fork.md
docs/transports/sse/: README.md
docs/transports/stdio/: README.md
scripts/: scaffold_catalog.py  validate_registry.py
