[project]
name = "tin-canMCP"
version = "0.1.0"
description = "Prescriptive template for building large MCP servers using a tiered catalog + broker pattern."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.0",
]
